<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighterBlue"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/headline1"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginStart="26dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/DrinkKing"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:textColor="@color/white"
        android:textSize="38sp"
        app:fontFamily="@font/bungee_shade"
        app:layout_constraintBottom_toTopOf="@+id/text_wer_spielt_mit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_wer_spielt_mit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginRight="93dp"
        android:layout_marginStart="93dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/spielmodus_wählen"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:fontFamily="@font/audiowide"
        app:layout_constraintBottom_toTopOf="@+id/Button_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline1" />

    <Button
        android:id="@+id/Button_hardcore"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="230dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginRight="108dp"
        android:layout_marginStart="108dp"
        android:text="@string/hardcore"
        android:textColorLink="@color/white"
        android:textSize="29sp"
        android:textStyle="bold"
        app:fontFamily="@font/audiowide"
        app:layout_constraintBottom_toTopOf="@+id/Button_nie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Button_normal"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="230dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginRight="108dp"
        android:layout_marginStart="108dp"
        android:text="@string/normal"
        android:textColorLink="@color/white"
        android:textSize="29sp"
        android:textStyle="bold"
        app:fontFamily="@font/audiowide"
        app:layout_constraintBottom_toTopOf="@+id/Button_hardcore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Button_nie"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginRight="77dp"
        android:layout_marginStart="77dp"
        android:text="@string/nie"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textStyle="bold"
        app:fontFamily="@font/audiowide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>