<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighterBlue"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/alberts_cooles_spiel"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:textColor="@color/white"
        android:textSize="38sp"
        app:fontFamily="@font/bungee_shade"
        app:layout_constraintBottom_toTopOf="@+id/text_wer_spielt_mit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_wer_spielt_mit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginRight="93dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/wer_spielt_mit"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:fontFamily="@font/audiowide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="29dp"
        android:layout_marginStart="30dp"
        android:ems="10"
        app:fontFamily="@font/audiowide"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/spieler"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_wer_spielt_mit" />

    <Button
        android:id="@+id/Button_add"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginRight="108dp"
        android:layout_marginStart="108dp"
        android:text="@string/spieler_hinzuf_gen"
        android:textColorLink="@color/white"
        app:fontFamily="@font/audiowide"
        app:layout_constraintBottom_toTopOf="@+id/_dynamic_lv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <ListView
        android:id="@+id/_dynamic_lv"
        android:layout_width="272dp"
        android:layout_height="197dp"
        android:cacheColorHint="@color/colorAccent"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_add" />

    <Button
        android:id="@+id/button_clear"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="139dp"
        android:layout_height="26dp"
        android:layout_marginEnd="122dp"
        android:layout_marginLeft="123dp"
        android:layout_marginRight="122dp"
        android:layout_marginStart="123dp"
        android:background="#00ff4081"
        android:text="@string/spieler_l_schen"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/button_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_dynamic_lv" />

    <Button
        android:id="@+id/button_play"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="229dp"
        android:layout_height="75dp"
        android:layout_marginBottom="37dp"
        android:layout_marginEnd="77dp"
        android:layout_marginLeft="78dp"
        android:layout_marginRight="77dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="17dp"
        android:background="@color/colorAccent"
        android:text="@string/spielen"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/audiowide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_clear" />

</android.support.constraint.ConstraintLayout>