<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighterBlue"
    tools:context=".EndScreen"
    >

    <Button
        android:id="@+id/button_change_players"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="219dp"
        android:layout_height="29dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="82dp"
        android:layout_marginLeft="83dp"
        android:layout_marginRight="82dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="179dp"
        android:background="@color/colorAccent"
        android:fadingEdge="none"
        android:text="@string/spieler_bearbeiten"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:fontFamily="@font/audiowide"
        app:layout_constraintBottom_toTopOf="@+id/button_play_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/headlineEnd"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginBottom="471dp"
        android:layout_marginEnd="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/DrinkKing"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
        android:textColor="@color/white"
        android:textSize="42sp"
        app:fontFamily="@font/bungee_shade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:layout_marginBottom="344dp"
        android:layout_marginEnd="31dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="31dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="@string/spiel_beendet"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/button_play_again"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="229dp"
        android:layout_height="75dp"
        android:layout_marginBottom="37dp"
        android:layout_marginEnd="77dp"
        android:layout_marginLeft="78dp"
        android:layout_marginRight="77dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="232dp"
        android:background="@color/colorAccent"
        android:fadingEdge="none"
        android:text="@string/erneut_spielen"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:fontFamily="@font/audiowide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</android.support.constraint.ConstraintLayout>